archivo con mejoras

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       <p>Descubre el mundo Pokémon!!!
         Aquí encontrarás toda la información
         que necesitas para vencer todas tus
-        batallas y ser el mejor maestro Pokémon.
+        batallas y ser el mejor maestro Pokémon de la región Kanto.
       </p>
     </div>
     <div class="logo" >
@@ -53,14 +53,14 @@
       </div> 
     </header>
     
-    <div id="pintame" class="pintame hide">
-    </div>
-  <section> 
+      <div id="pintame" class="pintame hide">
+      </div>
+    <section> 
       <div id= "resultado"></div> 
-  </section>    
+    </section>    
 
-  <nav>
-    <select id="select-type" class="select"> 
+    <nav>
+     <select id="select-type" class="select"> 
       <option  value="" disabled selected>Tipos</option>
       <option  value="Water"> Agua</option>
       <option  value="Ice">Hielo</option>
@@ -78,26 +78,27 @@
       <option  value="Ghost">Fantasma</option>   
      </select>
 
-    <select id="select-candy" class="select1"> 
+     <select id="select-candy" class="select1"> 
       <option  value="" disabled selected>Caramelos</option>
       <option  value= "12">Necesitan 12</option>
       <option  value= "25">Necesitan 25</option>
       <option  value= "50">Necesitan 50</option>
       <option  value= "100">Necesitan 100</option>
       <option  value= "400">Necesitan 400</option>
-    </select>
+     </select>
             
-    <select id="ordenar" class="ordenar"> 
+     <select id="ordenar" class="ordenar"> 
       <option  value="" disabled selected>Ordenar por</option>
       <option  value="0">A-Z</option>
       <option  value="1">Z-A</option>
-    </select>
+     </select>
 
-  </nav>
+     </nav>
   
     <a class="btnArriba" href="#" ><img src="https://steamuserimages-a.akamaihd.net/ugc/956335810430995441/D23328E105EA1D6577CE921487674DAB0532E8CA/"></a>
-    </div>
+     </div>
    </div> 
+
   <div id="pagina3" class="pagina3 hide">
     <button id="atras2" class="btnAtras"><img src="https://2.bp.blogspot.com/-xImAjQb9wbo/ViBLnewxnkI/AAAAAAAAHuc/gc-9grnBL70ifjpv13O0NGIx9LJCaOmkACPcB/s1600/042Golbat-1.gif">Atrás</button>
     <div id="topTen" class="top">
